shrivara-dev/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: shrivara-dev
spec:
  selector:
    matchLabels:
      resource: deployment
  template:
    metadata:
      labels:
        resource: deployment
    spec:
      containers:
      - image: shrivara/shrivara-dev:latest
        name: shrivara-dev
        imagePullPolicy: Always
