shrivara-dev/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: shrivara-dev
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    resource: deployment
